# midiquantize

./: .gitignore  README.md  midiquantize.py  pyproject.toml
midiquantize/: __main__.py
