[project]
name = "midiquantize"
version = "0.1.0"
description = ""
authors = [
    {name = "DJ Stomp",email = "85457381+DJStompZone@users.noreply.github.com"}
]
readme = "README.md"
repository = "https://github.com/DJStompZone/midiquantize/"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mido (>=1.3.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "midiquantize"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
